--- a/landing-page.html
+++ b/landing-page.html
@@ -32,7 +32,7 @@
     <section id="contato" class="cta">
         <h2>Experimente o Key Vault Hoje</h2>
         <p>Entre em contato e descubra como podemos ajudar sua empresa.</p>
-        <a href="#" class="btn">Entre em Contato</a>
+        <a href="#" class="btn2">Entre em Contato</a>
     </section>
     
     <footer>
