--- a/produto.html
+++ b/produto.html
@@ -47,34 +47,40 @@
     </header>
     <section class="features">
         <div class="feature">
-            <p>
-                Um software de gestão de licenças de software é uma solução que auxilia as
-            organizações a gerenciar de forma eficiente suas licenças de software, rastrear e
-            monitorar o uso das licenças, garantindo a conformidade legal.
-            Esses sistemas são cruciais para evitar violações de conformidade com as
-            políticas de licenciamento, reduzir riscos legais, otimizar custos e aumentar a
-            eficiência operacional.
-            </p>
+            <h1><b>O que é:</b></h1>
+                <p class="software">
+                        Um software de gestão de licenças de software é uma solução que auxilia as
+                    organizações a gerenciar de forma eficiente suas licenças de software, rastrear e
+                    monitorar o uso das licenças, garantindo a conformidade legal.
+                    Esses sistemas são cruciais para evitar violações de conformidade com as
+                    políticas de licenciamento, reduzir riscos legais, otimizar custos e aumentar a
+                    eficiência operacional.
+                </p>
         </div>
-        <div class="feature-ul">       
-            <ul><b>Benefícios:</b>
+        <div class="feature-ul">   
+            <h1><b>Benefícios:</b></h1>
+            <ul>
                 <li>
                     Reduz o risco de penalidades e multas associadas ao uso indevido de
                     software, garantindo que a organização esteja sempre em conformidade com as
                     licenças e contratos de software.
                 </li>
+                <br>
                 <li>Identifica licenças não utilizadas ou subutilizadas, permitindo que a
                     organização otimize seus gastos, adquirindo apenas o necessário e evitando a
                     compra de licenças extras.
                 </li>
+                <br>
                 <li>Facilita o gerenciamento de licenças e contratos, automatizando tarefas
                     repetitivas, como a verificação de conformidade e renovação de licenças, liberando
                     tempo para a equipe de TI focar em tarefas mais estratégicas.
                 </li>
+                <br>
                 <li>Proporciona uma visão clara sobre o estado de todas as licenças e
                     softwares, permitindo à organização controlar melhor os recursos, entender o uso e
                     melhorar a alocação de licenças.
                 </li>
+                <br>
                 <li>Automatização de Processos de Aquisição: Integrações com fornecedores de
                     software para facilitar o processo de compra e renovação de licenças.
                     Dentre outros.
@@ -84,7 +90,7 @@
     </section>
     <section id="contato" class="cta">
         <h2>Já é nosso cliente?</h2>       
-        <a href="#" class="btn">Faça Login</a>
+        <a href="#" class="btn2">Faça Login</a>
     </section>
     <footer>
         <p class="footer">&copy; 2025 Key Vault. Todos os direitos reservados.</p>
